Implementação dos produtos nas demais categorias

--- a/Acessorios.html
+++ b/Acessorios.html
@@ -25,6 +25,67 @@
             </nav>
         </header>
         <main>
+            <div class="Container">
+                <div class="Produtos">
+                    <div id = "img">
+                        <img src="img/Acessorio01.jpg" alt="Colar com pedra esmeralda " width="100%" height="250px"> 
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Colar com Pedra Esmeralda</p>
+                        <p class="txtAnuncio">79,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Acessorio02.jpg" alt="Colar de ouro com pingentes de cruz" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Colar de ouro com pingentes de cruz</p>
+                        <p class="txtAnuncio">109,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Acessorio03.jpg" alt="Colar de prata com pingetes diamantados" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Colar de prata com pingetes diamantados</p>
+                        <p class="txtAnuncio">81,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Calca04.jpg" alt="Pochete rosa com preto marca de onça" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Pochete rosa com preto marca de onça</p>
+                        <p class="txtAnuncio">88,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Acessorio05.jpg" alt="Brinco de prata" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Brinco de prata</p>
+                        <p class="txtAnuncio">129,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Acessorio06.jpg" alt="Brinco de ouro em forma de coração cravejado com pedras de prata" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Brinco de ouro em forma de coração cravejado com pedras de prata</p>
+                        <p class="txtAnuncio">159,99</p></a>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer>
             <ul class="rodape">
