--- a/Sandalias.html
+++ b/Sandalias.html
@@ -25,7 +25,67 @@
             </nav>
         </header>
         <main>
+            <div class="Container">
+                <div class="Produtos">
+                    <div id = "img">
+                        <img src="img/Sandalia01.jpg" alt="Sandália de couro" width="100%" height="250px"> 
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Sandália de couro</p>
+                        <p class="txtAnuncio">79,99</p></a>
+                    </div>
+                </div>
 
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Sandalia02.jpg" alt="Sandália vermelha" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Sandália Vermelha</p>
+                        <p class="txtAnuncio">109,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Sandalia03.jpg" alt="Sandália Rústica" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Sandália Rústica</p>
+                        <p class="txtAnuncio">81,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Sandalia04.jpg" alt="Sandália Preta" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Sandália Preta</p>
+                        <p class="txtAnuncio">88,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Sandalia05.jpg" alt="Sandália Verde Musgo" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Sandália Verde Musgo</p>
+                        <p class="txtAnuncio">129,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Sandalia06.jpg" alt="Sandália Salto alto com curvas" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Sandália Salto Modelo Helff</p>
+                        <p class="txtAnuncio">159,99</p></a>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer>
             <ul class="rodape">
