--- a/Acessorios.html
+++ b/Acessorios.html
@@ -58,7 +58,7 @@
 
                 <div class="Produtos">
                     <div id="img">
-                        <img src="img/Calca04.jpg" alt="Pochete rosa com preto marca de onça" width="100%" height="250px">
+                        <img src="img/Acessorio04.jpg" alt="Pochete rosa com preto marca de onça" width="100%" height="250px">
                     </div>
                     <div>
                         <a href="/"><p class="txtAnuncio">Pochete rosa com preto marca de onça</p>
