Implementação javascript para validação dos dados da tela de login salnvando no localstorage do navegador

--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,7 @@
                     <li><a href="Calcas.html">Calças</a></li>
                     <li><a href="Sandalias.html">Sandálias</a></li>
                     <li><a href="Acessorios.html">Acessórios</a></li>
+                    <li><a href="Login.html">Login</a></li>
                 </ul>
             </nav>
         </header>
