Ajustes na tela de cadastro e implementação do buscador

--- a/Index.html
+++ b/Index.html
@@ -16,16 +16,18 @@
             <nav>
                 <h1 class="logo">Xodózin</h1>
                 <ul class = "menu">
-                    <li><a href="Index.html">Home</a></li>
+                    <li><a href="Login.html">Login</a></li>
                     <li><a href="TShirt.html">T-Shirt</a></li>
                     <li><a href="Calcas.html">Calças</a></li>
                     <li><a href="Sandalias.html">Sandálias</a></li>
                     <li><a href="Acessorios.html">Acessórios</a></li>
-                    <li><a href="Login.html">Login</a></li>
                 </ul>
             </nav>
         </header>
         <main>
+            <div class="gcse-search">
+                <script async src="https://cse.google.com/cse.js?cx=bd457e6b7e115b98d"></script>
+            </div>
         </main>
         <footer>
             <ul class="rodape">
