--- a/Login.html
+++ b/Login.html
@@ -33,20 +33,30 @@
                                     value="" required="@">
                                 </div>
                                 <div class="input_div">
-                                    <input class="input_formulario" id="senha" type="password" name="password" placeholder="Digite sua Senha" required>
+                                    <input class="input_formulario" id="senha" type="password" name="password" placeholder="Digite sua Senha"
+                                    value="" required>
+                                </div>
+                                <div class="input_div">
+                                    <input class="input_formulario" id="senhaConfirm" type="password" name="password" placeholder="Digite sua Senha novamente" required>
                                 </div>
                                 <div class="input_div">                                    
                                     <input class="input_formulario" id="cep" name="cep" placeholder="Digite seu CEP" type="text" onblur="buscarCep(this.value)" required>
                                 </div>
                                 <div class="input_div">                                  
-                                    <input class="input_formulario" id="rua" name="rua" placeholder="Digite a rua" type="text" disabled required>
+                                    <input class="input_formulario" id="rua" name="rua" type="text" disabled required>
                                 </div>
                                 <div class="input_div">
-                                    <input class="input_formulario" id="bairro" name="bairro" placeholder="Digite seu bairro" disabled type="text" >
+                                    <input class="input_formulario" id="bairro" name="bairro" disabled type="text" >
                                 </div>
                                 <div class="input_div">
-                                    <input class="input_formulario" id="cidade" name="cidade" placeholder="Digite sua cidade" disabled type="text">
+                                    <input class="input_formulario" id="cidade" name="cidade" disabled type="text">
                                 </div> 
+                                <div class="input_div">
+                                    <input class="input_formulario" id="complemento" value="" placeholder="complmento" name="complemento" required>
+                                </div>
+                                <div class="input_div">
+                                    <input class="input_formulario" id="numero" value="" placeholder="Número" name="n" required>
+                                </div>
                                 <div class="input_div">   
                                     <label for="uf">Estado:</label>
                                 </div>
@@ -82,7 +92,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <input class="botao" value="ENVIAR" type="button" name="btnEnviar" onclick="validaEmail(); validaNome(); validaSenha(); validaCPF(); cadastrarDados()"></input>
+                            <input class="botao" value="ENVIAR" type="button" name="btnEnviar" onclick="validaEmail(); validaNome(); validaSenha(); validaComplementoNum(); validaCPF(); cadastrarDados()"></input>
                         </form>
                     </div>
                 </div>
