--- a/Calcas.html
+++ b/Calcas.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Yan Julião">
         <meta name="description" content="Site para venda de produtos de moda feminina">
         <style>
-            @import"css/style.css"
+            @import"css/style.css";
         </style>
     </head>
     <body>
@@ -16,11 +16,11 @@
             <nav>
                 <h1 class="logo">Xodózin</h1>
                 <ul class = "menu">
-                    <li><a href="Index.html">Home</a></li>
-                    <li><a href="TShirt.html">T-Shirt</a></li>
-                    <li><a href="Calcas.html">Calças</a></li>
-                    <li><a href="Sandalias.html">Sandálias</a></li>
-                    <li><a href="Acessorios.html">Acessórios</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="tshirt.html">T-Shirt</a></li>
+                    <li><a href="calcas.html">Calças</a></li>
+                    <li><a href="sandalias.html">Sandálias</a></li>
+                    <li><a href="acessorios.html">Acessórios</a></li>
                 </ul>
             </nav>
         </header>
