--- a/Index.html
+++ b/Index.html
@@ -18,11 +18,11 @@
             <nav>
                 <h1 class="logo">Xodózin</h1>
                 <ul class = "menu">
-                    <li><a href="Login.html">Login</a></li>
-                    <li><a href="TShirt.html">T-Shirt</a></li>
-                    <li><a href="Calcas.html">Calças</a></li>
-                    <li><a href="Sandalias.html">Sandálias</a></li>
-                    <li><a href="Acessorios.html">Acessórios</a></li>
+                    <li><a href="login.html">Login</a></li>
+                    <li><a href="tshirt.html">T-Shirt</a></li>
+                    <li><a href="calcas.html">Calças</a></li>
+                    <li><a href="sandalias.html">Sandálias</a></li>
+                    <li><a href="acessorios.html">Acessórios</a></li>
                 </ul>
             </nav>
         </header>
