--- a/Login.html
+++ b/Login.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="author" content="Yan Julião">
         <style>@import"css/login.css";</style>
-        <script src="js/Login.js"></script>
+        <script src="js/login.js"></script>
         <title>Xodozin Cadastro</title>
     </head>
     <body>
