--- a/acessorios.html
+++ b/acessorios.html
@@ -85,6 +85,46 @@
                         <p class="txtAnuncio">159,99</p></a>
                     </div>
                 </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Acessorio07.jpg" alt="Colar de ouro" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Colar de ouro</p>
+                        <p class="txtAnuncio">967,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Acessorio08.jpg" alt="Colar de Prata" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Colar de Prata</p>
+                        <p class="txtAnuncio">967,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Acessorio09.jpg" alt="Brinco verde" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Brinco verde</p>
+                        <p class="txtAnuncio">80,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Acessorio10.jpg" alt="Brinco de Ouro" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Brinco de Ouro</p>
+                        <p class="txtAnuncio">85,99</p></a>
+                    </div>
+                </div>
             </div>
         </main>
         <footer>
