--- a/calcas.html
+++ b/calcas.html
@@ -85,6 +85,46 @@
                         <p class="txtAnuncio">159,99</p></a>
                     </div>
                 </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Calca07.jpg" alt="Calça Jeans com flor branca na virilia" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Calça Jeans com flor branca</p>
+                        <p class="txtAnuncio">159,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Calca08.jpg" alt="Calça Leg preta" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Calça Leg preta</p>
+                        <p class="txtAnuncio">159,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Calca09.jpg" alt="Calça de Pano preta" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Calça de Pano preta</p>
+                        <p class="txtAnuncio">159,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Calca10.jpg" alt="Calça Jean basico preto" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Calça Jean basico preto</p>
+                        <p class="txtAnuncio">59,99</p></a>
+                    </div>
+                </div>
             </div>
         </main>
         <footer>
