--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
             <div class="gcse-search">
                 <script async src="https://cse.google.com/cse.js?cx=bd457e6b7e115b98d"></script>
             </div>
+            <div class="containertxt">
+                <p class="titulo">Olá, seja bem vindo à Xodózin Store!</p>
+                <p class="mensagem">
+                    Obrigado por se juntar conosco. Nós construímos nossa história por conta de você. 
+                    Nós adoraríamos saber os motivos que atraíram você para o nosso site. O seu feedback é valiosíssimo para que possamos seguir entregando exatamente
+                    o que os clientes desejam. 
+                </p>
+            </div>
         </main>
         <div class="cookies-container">
             <div class="cookies-content">
