--- a/sandalias.html
+++ b/sandalias.html
@@ -85,6 +85,46 @@
                         <p class="txtAnuncio">159,99</p></a>
                     </div>
                 </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Sandalia07.jpg" alt="Sandália Bege com felpo" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Sandália Bege com felpo</p>
+                        <p class="txtAnuncio">204,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Sandalia08.jpg" alt="Sandália Caramelo de couro" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Sandália Caramelo de couro</p>
+                        <p class="txtAnuncio">204,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Sandalia09.jpg" alt="Sandália com cintas" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Sandália com cintas</p>
+                        <p class="txtAnuncio">204,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Sandalia10.jpg" alt="Sandália verde musgo" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Sandália verde musgo</p>
+                        <p class="txtAnuncio">89,99</p></a>
+                    </div>
+                </div>
             </div>
         </main>
         <footer>
