--- a/tshirt.html
+++ b/tshirt.html
@@ -55,6 +55,76 @@
                         <p class="txtAnuncio">71,99</p></a>
                     </div>
                 </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Roupa04.jpg" alt="Vestido coral" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Vestido coral</p>
+                        <p class="txtAnuncio">71,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Roupa05.jpg" alt="Vestido Mastilhado" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Vestido Mastilhado</p>
+                        <p class="txtAnuncio">71,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Roupa06.jpg" alt="Vestido Tingido" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Vestido Tingido</p>
+                        <p class="txtAnuncio">71,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Roupa07.jpg" alt="Camisa curta listrada" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Camisa curta listrada</p>
+                        <p class="txtAnuncio">60,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Roupa08.jpg" alt="Camisa básica verde" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Camisa básica verde</p>
+                        <p class="txtAnuncio">60,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Roupa09.jpg" alt="Vestido verde escuro" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Vestido verde escuro</p>
+                        <p class="txtAnuncio">60,99</p></a>
+                    </div>
+                </div>
+
+                <div class="Produtos">
+                    <div id="img">
+                        <img src="img/Roupa10.jpg" alt="Blusa social bege simples" width="100%" height="250px">
+                    </div>
+                    <div>
+                        <a href="/"><p class="txtAnuncio">Blusa social bege simples</p>
+                        <p class="txtAnuncio">60,99</p></a>
+                    </div>
+                </div>
             </div>    
         </main>
         <footer>
