--- a/sandalias.html
+++ b/sandalias.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header> 
-            <nav>
+            <nav id="nav">
                 <h1 class="logo">Xodózin</h1>
                 <ul class = "menu">
                     <li><a href="index.html">Home</a></li>
